# aba2sat

./: .gitignore  Cargo.toml  README.md  flake.nix
scripts/: aba-generator-acyclic.py  aba_generator.py  aba_generator_acyclic.py  aba_generator_acyclic_starter.sh  analyse-instance  decode-result-folder.py  generate_nn.py  instructor  run-gen.sh  run-model.py  sc-aba2sat  sc-analyse-instance  sc-aspforaba  sc-batch.sh  test.py  validate.sh
src/: args.rs  clauses.rs  error.rs  lib.rs  literal.rs  main.rs  mapper.rs  parser.rs
src/aba/: debug.rs  mod.rs  prepared.rs  theory.rs  traverse.rs
src/aba/problems/: admissibility.rs  admissible.rs  complete.rs  conflict_free.rs  mod.rs  verify_admissibility.rs
src/graph/: mod.rs
src/tests/: mod.rs
