[package]
name = "aba2sat"
version = "0.1.0"
edition = "2021"
authors = ["Malte Tammena <malte.tammena@pm.me>"]
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cadical = "0.1.14"
clap = { version = "4.4.8", features = ["wrap_help", "derive"] }
iter_tools = "0.10.0"
nom = "7.1.3"
thiserror = "1.0.50"
