[package]
name = "aba2sat"
version = "0.1.0"
edition = "2021"
authors = ["Malte Tammena <malte.tammena@pm.me>"]
license = "GPL3"

default-run = "aba2sat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.8.0"
cadical = "0.1.14"
clap = { version = "4.4.8", features = ["wrap_help", "derive"] }
fun_time = { version = "0.3.4", optional = true, features = ["log"] }
lazy_static = "1.4.0"
log = "0.4.21"
nom = "7.1.3"
pretty_env_logger = "0.5.0"
signal-hook = "0.3.17"
thiserror = "1.0.50"

[features]
timing = ["dep:fun_time"]
